--- a/apps/classic/tsconfig.json
+++ b/apps/classic/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@sudoku/shared-hooks": ["../../packages/shared-hooks"],
+      "@sudoku/shared-types": ["../../packages/shared-types"],
+      "@sudoku/shared-utils": ["../../packages/shared-utils"],
+      "@sudoku/shared-storages": ["../../packages/shared-storages"]
     },
     "moduleSuffixes": [".native", ".web", ""]
   },
