--- a/apps/killer/tsconfig.json
+++ b/apps/killer/tsconfig.json
@@ -1,3 +1,12 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"],
+      "@sudoku/shared-hooks": ["../../packages/shared-hooks"],
+      "@sudoku/shared-types": ["../../packages/shared-types"],
+      "@sudoku/shared-utils": ["../../packages/shared-utils"],
+      "@sudoku/shared-storages": ["../../packages/shared-storages"]
+    }
+  }
 }
