--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   ],
   "scripts": {
     "dev:killer": "yarn workspace killer start",
+    "dev:killer:ios": "yarn workspace killer ios",
+    "dev:killer:android": "yarn workspace killer android",
     "dev:classic": "yarn workspace classic start",
+    "dev:classic:ios": "yarn workspace classic ios",
+    "dev:classic:android": "yarn workspace classic android",
     "format": "prettier --write .",
     "postinstall": "expo-yarn-workspaces postinstall"
   },
