--- a/apps/classic/ios/Podfile
+++ b/apps/classic/ios/Podfile
@@ -37,6 +37,7 @@ target 'sudokuclassic' do
   use_react_native!(
     :path => config[:reactNativePath],
     :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
+    :flipper_configuration => FlipperConfiguration.disabled,
     :new_arch_enabled => podfile_properties['newArchEnabled'] == 'true',
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
