--- a/packages/shared-hooks/package.json
+++ b/packages/shared-hooks/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.ts",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "peerDependencies": {
+    "react-native-safe-area-context": "*"
+  }
 }
