--- a/apps/classic/package.json
+++ b/apps/classic/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
