Refactor BoardScreen, HowToPlayScreen, and LeaderboardScreen to utilize constantEnv for maximum hints, mistakes, and time played. Update SettingsScreen to improve settings handling and enhance MainScreen with new game options. Remove unused components and services from the killer app for cleaner codebase.

--- a/packages/shared-storages/package.json
+++ b/packages/shared-storages/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {},
   "peerDependencies": {
-    "react-native-mmkv": "*"
+    "react-native-mmkv": "*",
+    "@react-native-async-storage/async-storage": "*"
   }
 }
