--- a/packages/shared-components/tsconfig.json
+++ b/packages/shared-components/tsconfig.json
@@ -1,14 +1,3 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "paths": {
-      "@sudoku/shared-events": ["../../packages/shared-events"],
-      "@sudoku/shared-hooks": ["../../packages/shared-hooks"],
-      "@sudoku/shared-icons": ["../../packages/shared-icons"],
-      "@sudoku/shared-services": ["../../packages/shared-services"],
-      "@sudoku/shared-themes": ["../../packages/shared-themes"],
-      "@sudoku/shared-types": ["../../packages/shared-types"],
-      "@sudoku/shared-utils": ["../../packages/shared-utils"]
-    }
-  }
+  "extends": "../../tsconfig.base.json"
 }
