--- a/packages/shared-storages/tsconfig.json
+++ b/packages/shared-storages/tsconfig.json
@@ -1,12 +1,3 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "paths": {
-      "@sudoku/shared-types": ["../../packages/shared-types"],
-      "@sudoku/shared-services": ["../../packages/shared-services"],
-      "@sudoku/shared-utils": ["../../packages/shared-utils"],
-      "@sudoku/shared-storages": ["../../packages/shared-storages"]
-    },
-    "lib": ["esnext", "dom"]
-  }
+  "extends": "../../tsconfig.base.json"
 }
