--- a/packages/shared-types/tsconfig.json
+++ b/packages/shared-types/tsconfig.json
@@ -1,10 +1,3 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "paths": {
-      "@sudoku/shared-types": ["../../packages/shared-types"],
-      "@sudoku/shared-utils": ["../../packages/shared-utils"],
-      "@sudoku/shared-services": ["../../packages/shared-services"]
-    }
-  }
+  "extends": "../../tsconfig.base.json"
 }
