--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -3,5 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "private": true,
-  "peerDependencies": {}
+  "peerDependencies": {
+    "@react-navigation/native": "*"
+  }
 }
