--- a/apps/classic/android/app/build.gradle
+++ b/apps/classic/android/app/build.gradle
@@ -92,7 +92,7 @@ android {
         applicationId 'com.finbertngo.sudokuclassic'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 5
         versionName "0.0.1"
     }
     signingConfigs {
@@ -102,6 +102,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('sudoku-key.keystore')
+            storePassword 'finbertngo'
+            keyAlias 'sudokuKey'
+            keyPassword 'finbertngo'
+        }
     }
     buildTypes {
         debug {
@@ -110,7 +116,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
