--- a/apps/classic/ios/sudokuclassic/Info.plist
+++ b/apps/classic/ios/sudokuclassic/Info.plist
@@ -5,15 +5,19 @@
 		<key>CADisableMinimumFrameDurationOnPhone</key>
 		<true/>
 		<key>CFBundleDevelopmentRegion</key>
-		<string>$(DEVELOPMENT_LANGUAGE)</string>
-		<key>CFBundleDisplayName</key>
-		<string>sudoku-classic</string>
+		<string>en</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
+		<key>CFBundleLocalizations</key>
+		<array>
+			<string>en</string>
+			<string>vi</string>
+			<string>ja</string>
+		</array>
 		<key>CFBundleName</key>
 		<string>$(PRODUCT_NAME)</string>
 		<key>CFBundlePackageType</key>
@@ -34,10 +38,6 @@
 		</array>
 		<key>CFBundleVersion</key>
 		<string>1</string>
-		<key>GADApplicationIdentifier</key>
-		<string>ca-app-pub-4776985253905766~3654919331</string>
-		<key>GADDelayAppMeasurementInit</key>
-		<false/>
 		<key>LSMinimumSystemVersion</key>
 		<string>12.0</string>
 		<key>LSRequiresIPhoneOS</key>
@@ -70,6 +70,24 @@
 			<string>UIInterfaceOrientationPortrait</string>
 			<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false />
+		<key>GADApplicationIdentifier</key>
+		<string>ca-app-pub-4776985253905766~3654919331</string>
+		<key>SKAdNetworkItems</key>
+		<array>
+			<dict>
+				<key>SKAdNetworkIdentifier</key>
+				<string>cstr6suwn9.skadnetwork</string>
+			</dict>
+		</array>
+		<key>UIDeviceFamily</key>
+		<array>
+			<integer>1</integer>
+			<integer>2</integer>
+		</array>
+		<key>GADDelayAppMeasurementInit</key>
+		<false/>
 		<key>UISupportedInterfaceOrientations~ipad</key>
 		<array>
 			<string>UIInterfaceOrientationPortrait</string>
