--- a/.github/workflows/killer_android_internal_github.yml
+++ b/.github/workflows/killer_android_internal_github.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - develop
+      # - develop
     paths:
       - 'packages/**'
       - 'apps/killer/android/**'
