Update GitHub workflows to enable 'develop' branch triggers, refactor environment variable handling for keystore and API keys, and enhance .gitignore files for better resource management. Update versioning in Info.plist files and adjust Fastfile paths for improved build configurations.

--- a/.github/workflows/classic_ios_beta_github.yml
+++ b/.github/workflows/classic_ios_beta_github.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      # - develop
+      - develop
     paths:
       - 'packages/**'
       - 'apps/classic/ios/**'
@@ -48,9 +48,9 @@ jobs:
 
       - name: Restore AuthKey from base64
         run: |
-          echo "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 -d > apps/classic/ios/fastlane/AuthKey.p8
+          echo "$C_APP_STORE_CONNECT_API_KEY_BASE64" | base64 -d > apps/classic/ios/fastlane/AuthKey.p8
         env:
-          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.C_APP_STORE_CONNECT_API_KEY_BASE64 }}
+          C_APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.C_APP_STORE_CONNECT_API_KEY_BASE64 }}
 
       - name: Install fastlane (global)
         run: |
