--- a/.github/workflows/classic_android_internal_github.yml
+++ b/.github/workflows/classic_android_internal_github.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      # - develop
+      - develop
     paths:
       - 'packages/**'
       - 'apps/classic/android/**'
@@ -39,8 +39,11 @@ jobs:
 
       - name: Decode keystore
         run: |
-          echo "${{ secrets.C_ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > apps/classic/android/app/sudoku-key.keystore
-          echo "${{ secrets.C_PLAY_STORE_KEY_BASE64 }}" | base64 --decode > apps/classic/android/fastlane/play-store-key.json
+          echo "$C_ANDROID_KEYSTORE_BASE64" | base64 --decode > apps/classic/android/app/sudoku-key.keystore
+          echo "$C_PLAY_STORE_KEY_BASE64" | base64 --decode > apps/classic/android/fastlane/play-store-key.json
+        env:
+          C_ANDROID_KEYSTORE_BASE64: ${{ secrets.C_ANDROID_KEYSTORE_BASE64 }}
+          C_PLAY_STORE_KEY_BASE64: ${{ secrets.C_PLAY_STORE_KEY_BASE64 }}
 
       - name: Install dependencies
         run: |
