--- a/.github/workflows/killer_android_internal_github.yml
+++ b/.github/workflows/killer_android_internal_github.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      # - develop
+      - develop
     paths:
       - 'packages/**'
       - 'apps/killer/android/**'
@@ -47,7 +47,10 @@ jobs:
 
       - name: Run Fastlane internal_github (Android)
         run: |
-          cd apps/killer/android
+          cd apps/killer
+          rm -rf node_modules
+          ln -s ../../node_modules .
+          cd android
           fastlane internal_github
         env:
           APP_PACKAGE_NAME: ${{ secrets.K_APP_PACKAGE_NAME }}
