--- a/.github/workflows/killer_ios_beta_github.yml
+++ b/.github/workflows/killer_ios_beta_github.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      # - develop
+      - develop
     paths:
       - 'packages/**'
       - 'apps/killer/ios/**'
@@ -42,9 +42,9 @@ jobs:
 
       - name: Restore AuthKey from base64
         run: |
-          echo "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 -d > apps/killer/ios/fastlane/AuthKey.p8
+          echo "$K_APP_STORE_CONNECT_API_KEY_BASE64" | base64 -d > apps/killer/ios/fastlane/AuthKey.p8
         env:
-          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.K_APP_STORE_CONNECT_API_KEY_BASE64 }}
+          K_APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.K_APP_STORE_CONNECT_API_KEY_BASE64 }}
 
       - name: Install fastlane (global)
         run: |
