--- a/apps/classic/.gitignore
+++ b/apps/classic/.gitignore
@@ -30,6 +30,28 @@ yarn-error.*
 .DS_Store
 *.pem
 
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+**/.xcode.env.local
+*.app.dSYM.zip
+ios/screenshots
+
 # local env files
 .env*.local
 .env
@@ -43,3 +65,7 @@ app-example
 build*.aab
 
 play-store-key.json
+
+sudoku-key.keystore
+
+report.xml
