--- a/.github/workflows/ios_beta_github.yml
+++ b/.github/workflows/ios_beta_github.yml
@@ -1,4 +1,4 @@
-name: Classic iOS
+name: iOS Beta Github
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
       - master
       - develop
     paths:
+      - '.github/workflows/ios_beta_github.yml'
       - 'packages/**'
       - 'apps/classic/ios/**'
       - 'apps/classic/app/**'
@@ -45,19 +46,22 @@ jobs:
         run: |
           yarn install
           cd apps/classic/ios && pod install
+          cd ../killer/ios && pod install
 
       - name: Restore AuthKey from base64
         run: |
           echo "$C_APP_STORE_CONNECT_API_KEY_BASE64" | base64 -d > apps/classic/ios/fastlane/AuthKey.p8
+          echo "$K_APP_STORE_CONNECT_API_KEY_BASE64" | base64 -d > apps/killer/ios/fastlane/AuthKey.p8
         env:
           C_APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.C_APP_STORE_CONNECT_API_KEY_BASE64 }}
+          K_APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.K_APP_STORE_CONNECT_API_KEY_BASE64 }}
 
       - name: Install fastlane (global)
         run: |
           sudo gem install fastlane
           fastlane --version
 
-      - name: Run Fastlane beta_github (iOS)
+      - name: Run Fastlane classic beta_github (iOS)
         run: |
           cd apps/classic/ios
           fastlane beta_github
@@ -73,3 +77,20 @@ jobs:
           AD_UNIT_INTERSTITIAL_IOS: ${{ secrets.C_AD_UNIT_INTERSTITIAL_IOS }}
           AD_UNIT_REWARDED_IOS: ${{ secrets.C_AD_UNIT_REWARDED_IOS }}
           AD_UNIT_REWARDED_INTERSTITIAL_IOS: ${{ secrets.C_AD_UNIT_REWARDED_INTERSTITIAL_IOS }}
+
+      - name: Run Fastlane killer beta_github (iOS)
+        run: |
+          cd apps/killer/ios
+          fastlane beta_github
+        env:
+          IDEDisableFileSyncMonitor: 'YES'
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          UNSPLASH_ACCESS_KEY: ${{ secrets.K_UNSPLASH_ACCESS_KEY }}
+          AD_UNIT_BANNER_ANDROID: ${{ secrets.K_AD_UNIT_BANNER_ANDROID }}
+          AD_UNIT_INTERSTITIAL_ANDROID: ${{ secrets.K_AD_UNIT_INTERSTITIAL_ANDROID }}
+          AD_UNIT_REWARDED_ANDROID: ${{ secrets.K_AD_UNIT_REWARDED_ANDROID }}
+          AD_UNIT_REWARDED_INTERSTITIAL_ANDROID: ${{ secrets.K_AD_UNIT_REWARDED_INTERSTITIAL_ANDROID }}
+          AD_UNIT_BANNER_IOS: ${{ secrets.K_AD_UNIT_BANNER_IOS }}
+          AD_UNIT_INTERSTITIAL_IOS: ${{ secrets.K_AD_UNIT_INTERSTITIAL_IOS }}
+          AD_UNIT_REWARDED_IOS: ${{ secrets.K_AD_UNIT_REWARDED_IOS }}
+          AD_UNIT_REWARDED_INTERSTITIAL_IOS: ${{ secrets.K_AD_UNIT_REWARDED_INTERSTITIAL_IOS }}
