Fix path for iOS pod installation in GitHub workflow to ensure correct directory navigation.

--- a/.github/workflows/ios_beta_github.yml
+++ b/.github/workflows/ios_beta_github.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           yarn install
           cd apps/classic/ios && pod install
-          cd ../killer/ios && pod install
+          cd ../../killer/ios && pod install
 
       - name: Restore AuthKey from base64
         run: |
