--- a/apps/classic/package.json
+++ b/apps/classic/package.json
@@ -4,10 +4,12 @@
   "version": "1.0.0",
   "scripts": {
     "prebuild:android:force": "cd android && fastlane increment_vc && fastlane increment_vn_force",
-    "prebuild:android": "cd android && fastlane increment_vc",
+    "prebuild:android:normal": "cd android && fastlane increment_vc && fastlane increment_vn",
     "prebuild:ios:force": "cd ios && fastlane increment_bn && fastlane increment_vn_force",
+    "prebuild:ios:normal": "cd ios && fastlane increment_bn && fastlane increment_vn",
     "prebuild:ios": "cd ios && fastlane increment_bn",
     "prebuild:force": "yarn prebuild:android:force && yarn prebuild:ios:force",
+    "prebuild:normal": "yarn prebuild:android:normal && yarn prebuild:ios:normal",
     "prebuild": "yarn prebuild:android && yarn prebuild:ios",
     "start": "cp .env.development .env && expo start",
     "reset-project": "node ./scripts/reset-project.js",
