--- a/apps/killer/package.json
+++ b/apps/killer/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "prebuild:android:force": "cd android && fastlane increment_vc && fastlane increment_vn_force",
     "prebuild:android:normal": "cd android && fastlane increment_vc && fastlane increment_vn",
+    "prebuild:android": "cd android && fastlane increment_vc",
     "prebuild:ios:force": "cd ios && fastlane increment_bn && fastlane increment_vn_force",
     "prebuild:ios:normal": "cd ios && fastlane increment_bn && fastlane increment_vn",
+    "prebuild:ios": "cd ios && fastlane increment_bn",
     "prebuild:force": "yarn prebuild:android:force && yarn prebuild:ios:force",
     "prebuild:normal": "yarn prebuild:android:normal && yarn prebuild:ios:normal",
     "prebuild": "yarn prebuild:android && yarn prebuild:ios",
