--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -7,6 +7,7 @@
     "i18next": "*",
     "react-native-uuid": "*",
     "date-fns": "*",
-    "expo-constants": "*"
+    "expo-constants": "*",
+    "killer-sudoku-generator": "*"
   }
 }
