--- a/.github/workflows/android_internal_github_classic.yml
+++ b/.github/workflows/android_internal_github_classic.yml
@@ -5,7 +5,14 @@ on:
     branches:
       - master
     paths:
-      - 'packages/**'
+      - 'apps/classic/android/**'
+      - 'apps/classic/app/**'
+      - 'apps/classic/assets/**'
+      - 'apps/classic/i18n/**'
+      - 'apps/classic/theme/**'
+      - 'apps/classic/types/**'
+      - 'apps/classic/utils/**'
+      - 'apps/classic/app.config.ts'
 
 jobs:
   build-ios:
@@ -32,13 +39,9 @@ jobs:
         run: |
           echo "$C_ANDROID_KEYSTORE_BASE64" | base64 --decode > apps/classic/android/app/sudoku-key.keystore
           echo "$C_PLAY_STORE_KEY_BASE64" | base64 --decode > apps/classic/android/fastlane/play-store-key.json
-          echo "$K_ANDROID_KEYSTORE_BASE64" | base64 --decode > apps/killer/android/app/sudoku-key.keystore
-          echo "$K_PLAY_STORE_KEY_BASE64" | base64 --decode > apps/killer/android/fastlane/play-store-key.json
         env:
           C_ANDROID_KEYSTORE_BASE64: ${{ secrets.C_ANDROID_KEYSTORE_BASE64 }}
           C_PLAY_STORE_KEY_BASE64: ${{ secrets.C_PLAY_STORE_KEY_BASE64 }}
-          K_ANDROID_KEYSTORE_BASE64: ${{ secrets.K_ANDROID_KEYSTORE_BASE64 }}
-          K_PLAY_STORE_KEY_BASE64: ${{ secrets.K_PLAY_STORE_KEY_BASE64 }}
 
       - name: Install dependencies
         run: |
@@ -64,22 +67,3 @@ jobs:
           AD_UNIT_INTERSTITIAL_IOS: ${{ secrets.C_AD_UNIT_INTERSTITIAL_IOS }}
           AD_UNIT_REWARDED_IOS: ${{ secrets.C_AD_UNIT_REWARDED_IOS }}
           AD_UNIT_REWARDED_I_IOS: ${{ secrets.C_AD_UNIT_REWARDED_I_IOS }}
-
-      - name: Run Fastlane killer internal_github (Android)
-        run: |
-          cd apps/killer
-          rm -rf node_modules
-          ln -s ../../node_modules .
-          cd android
-          fastlane internal_github
-        env:
-          APP_PACKAGE_NAME: ${{ secrets.K_APP_PACKAGE_NAME }}
-          UNSPLASH_ACCESS_KEY: ${{ secrets.K_UNSPLASH_ACCESS_KEY }}
-          AD_UNIT_BANNER_ANDROID: ${{ secrets.K_AD_UNIT_BANNER_ANDROID }}
-          AD_UNIT_INTERSTITIAL_ANDROID: ${{ secrets.K_AD_UNIT_INTERSTITIAL_ANDROID }}
-          AD_UNIT_REWARDED_ANDROID: ${{ secrets.K_AD_UNIT_REWARDED_ANDROID }}
-          AD_UNIT_REWARDED_I_ANDROID: ${{ secrets.K_AD_UNIT_REWARDED_I_ANDROID }}
-          AD_UNIT_BANNER_IOS: ${{ secrets.K_AD_UNIT_BANNER_IOS }}
-          AD_UNIT_INTERSTITIAL_IOS: ${{ secrets.K_AD_UNIT_INTERSTITIAL_IOS }}
-          AD_UNIT_REWARDED_IOS: ${{ secrets.K_AD_UNIT_REWARDED_IOS }}
-          AD_UNIT_REWARDED_I_IOS: ${{ secrets.K_AD_UNIT_REWARDED_I_IOS }}
