--- a/.github/workflows/android_internal_github_killer.yml
+++ b/.github/workflows/android_internal_github_killer.yml
@@ -5,7 +5,13 @@ on:
     branches:
       - master
     paths:
-      - 'packages/**'
+      - 'apps/killer/android/**'
+      - 'apps/killer/app/**'
+      - 'apps/killer/assets/**'
+      - 'apps/killer/i18n/**'
+      - 'apps/killer/theme/**'
+      - 'apps/killer/types/**'
+      - 'apps/killer/utils/**'
 
 jobs:
   build-ios:
@@ -30,13 +36,9 @@ jobs:
 
       - name: Decode keystore
         run: |
-          echo "$C_ANDROID_KEYSTORE_BASE64" | base64 --decode > apps/classic/android/app/sudoku-key.keystore
-          echo "$C_PLAY_STORE_KEY_BASE64" | base64 --decode > apps/classic/android/fastlane/play-store-key.json
           echo "$K_ANDROID_KEYSTORE_BASE64" | base64 --decode > apps/killer/android/app/sudoku-key.keystore
           echo "$K_PLAY_STORE_KEY_BASE64" | base64 --decode > apps/killer/android/fastlane/play-store-key.json
         env:
-          C_ANDROID_KEYSTORE_BASE64: ${{ secrets.C_ANDROID_KEYSTORE_BASE64 }}
-          C_PLAY_STORE_KEY_BASE64: ${{ secrets.C_PLAY_STORE_KEY_BASE64 }}
           K_ANDROID_KEYSTORE_BASE64: ${{ secrets.K_ANDROID_KEYSTORE_BASE64 }}
           K_PLAY_STORE_KEY_BASE64: ${{ secrets.K_PLAY_STORE_KEY_BASE64 }}
 
@@ -48,22 +50,6 @@ jobs:
         run: |
           sudo gem install fastlane
           fastlane --version
-
-      - name: Run Fastlane classic internal_github (Android)
-        run: |
-          cd apps/classic/android
-          fastlane internal_github
-        env:
-          APP_PACKAGE_NAME: ${{ secrets.C_APP_PACKAGE_NAME }}
-          UNSPLASH_ACCESS_KEY: ${{ secrets.C_UNSPLASH_ACCESS_KEY }}
-          AD_UNIT_BANNER_ANDROID: ${{ secrets.C_AD_UNIT_BANNER_ANDROID }}
-          AD_UNIT_INTERSTITIAL_ANDROID: ${{ secrets.C_AD_UNIT_INTERSTITIAL_ANDROID }}
-          AD_UNIT_REWARDED_ANDROID: ${{ secrets.C_AD_UNIT_REWARDED_ANDROID }}
-          AD_UNIT_REWARDED_I_ANDROID: ${{ secrets.C_AD_UNIT_REWARDED_I_ANDROID }}
-          AD_UNIT_BANNER_IOS: ${{ secrets.C_AD_UNIT_BANNER_IOS }}
-          AD_UNIT_INTERSTITIAL_IOS: ${{ secrets.C_AD_UNIT_INTERSTITIAL_IOS }}
-          AD_UNIT_REWARDED_IOS: ${{ secrets.C_AD_UNIT_REWARDED_IOS }}
-          AD_UNIT_REWARDED_I_IOS: ${{ secrets.C_AD_UNIT_REWARDED_I_IOS }}
 
       - name: Run Fastlane killer internal_github (Android)
         run: |
