--- a/packages/shared-utils/package.json
+++ b/packages/shared-utils/package.json
@@ -8,6 +8,7 @@
     "react-native-uuid": "*",
     "date-fns": "*",
     "expo-constants": "*",
-    "killer-sudoku-generator": "*"
+    "killer-sudoku-generator": "*",
+    "react-native-device-info": "*"
   }
 }
