--- a/apps/classic/tsconfig.json
+++ b/apps/classic/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "paths": {
       "@/*": ["./*"],
+      "@sudoku/shared-ads-safe": ["../../packages/shared-ads-safe"],
       "@sudoku/shared-components": ["../../packages/shared-components"],
       "@sudoku/shared-events": ["../../packages/shared-events"],
       "@sudoku/shared-hooks": ["../../packages/shared-hooks"],
