--- a/apps/killer/tsconfig.json
+++ b/apps/killer/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"],
+      "@sudoku/shared-ads-safe": ["../../packages/shared-ads-safe"],
       "@sudoku/shared-components": ["../../packages/shared-components"],
       "@sudoku/shared-events": ["../../packages/shared-events"],
       "@sudoku/shared-hooks": ["../../packages/shared-hooks"],
