--- a/apps/killer/ios/SudokuKillerApp/Info.plist
+++ b/apps/killer/ios/SudokuKillerApp/Info.plist
@@ -39,6 +39,7 @@
 		<array>
 			<string>Ionicons.ttf</string>
 			<string>MaterialCommunityIcons.ttf</string>
+			<string>Feather.ttf</string>
 		</array>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
