Update GitHub workflows to exclude 'packages/**' paths and add 'workflow_dispatch' trigger for iOS and Android workflows.

--- a/.github/workflows/android_internal_github_classic.yml
+++ b/.github/workflows/android_internal_github_classic.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
     paths:
+      - '!packages/**'
       - 'apps/classic/android/**'
       - 'apps/classic/app/**'
       - 'apps/classic/assets/**'
