--- a/.github/workflows/ios_beta_github_classic.yml
+++ b/.github/workflows/ios_beta_github_classic.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
     paths:
+      - '!packages/**'
       - 'apps/classic/ios/**'
       - 'apps/classic/app/**'
       - 'apps/classic/assets/**'
