--- a/.github/workflows/ios_beta_github_killer.yml
+++ b/.github/workflows/ios_beta_github_killer.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
     paths:
+      - '!packages/**'
       - 'apps/killer/ios/**'
       - 'apps/killer/app/**'
       - 'apps/killer/assets/**'
