--- a/.github/workflows/ios_beta_github_classic.yml
+++ b/.github/workflows/ios_beta_github_classic.yml
@@ -1,11 +1,11 @@
-name: iOS Beta Github
+name: iOS Beta Github (Classic)
 
 on:
   push:
     branches:
       - master
     paths:
-      - '!packages/**'
+      - 'packages/**'
       - 'apps/classic/ios/**'
       - 'apps/classic/app/**'
       - 'apps/classic/assets/**'
@@ -24,6 +24,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Check if packages/** changed
+        id: check-packages
+        run: |
+          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^packages/'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Cancel if packages changed
+        if: steps.check-packages.outputs.changed == 'true'
+        run: |
+          echo "Changes detected in packages/**. Skipping workflow."
+          exit 0
 
       - name: Setup SSH key for GitHub
         uses: webfactory/ssh-agent@v0.9.0
