--- a/.github/workflows/ios_beta_github_killer.yml
+++ b/.github/workflows/ios_beta_github_killer.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - master
     paths:
-      - 'packages/**'
       - 'apps/killer/ios/**'
       - 'apps/killer/app/**'
       - 'apps/killer/assets/**'
@@ -15,8 +14,53 @@ on:
       - 'apps/killer/utils/**'
 
 jobs:
-  build-ios:
-    name: Build and Upload iOS to TestFlight
+  check-changes:
+    name: Check Code Changes
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.filter.outputs.should_run }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Determine diff range
+        id: sha-range
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "base_sha=${{ github.event.pull_request.base.sha }}" >> $GITHUB_OUTPUT
+            echo "head_sha=${{ github.event.pull_request.head.sha }}" >> $GITHUB_OUTPUT
+          else
+            echo "base_sha=${{ github.event.before }}" >> $GITHUB_OUTPUT
+            echo "head_sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Get changed files
+        id: get-changes
+        run: |
+          changed_files=$(git diff --name-only ${{ steps.sha-range.outputs.base_sha }} ${{ steps.sha-range.outputs.head_sha }})
+          echo "$changed_files" > changed.txt
+          echo "Changed files:"
+          cat changed.txt
+
+      - name: Check affected paths
+        id: filter
+        run: |
+          if grep -q '^packages/' changed.txt; then
+            echo "Changes in packages/** detected → skip workflow"
+            echo "should_run=false" >> $GITHUB_OUTPUT
+          elif grep -qE '^(apps/killer/)' changed.txt; then
+            echo "Changes in apps/killer/** → continue"
+            echo "should_run=true" >> $GITHUB_OUTPUT
+          else
+            echo "No relevant changes → skip"
+            echo "should_run=false" >> $GITHUB_OUTPUT
+          fi
+
+  build:
+    name: Run Killer Build
+    needs: check-changes
+    if: needs.check-changes.outputs.should_run == 'true'
     runs-on: macos-latest
     timeout-minutes: 60
 
