--- a/apps/classic/ios/sudokuclassic/Info.plist
+++ b/apps/classic/ios/sudokuclassic/Info.plist
@@ -25,7 +25,7 @@
 		<key>CFBundleShortVersionString</key>
 		<string>0.0.3</string>
 		<key>CFBundleVersion</key>
-		<string>12</string>
+		<string>13</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleURLTypes</key>
@@ -98,6 +98,8 @@
 		<key>UIUserInterfaceStyle</key>
 		<string>Automatic</string>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false/>
+		<key>ITSAppUsesNonExemptEncryption</key>
 		<false/>
 	</dict>
 </plist>
