Add APP_VARIANT environment variable to workflows and update BoardScreen save logic
- Introduced APP_VARIANT: 'killer' in Android and iOS GitHub workflows for better environment management.
- Refactored handleSaveGame in BoardScreen to accept newBoard and newHistory parameters for improved state management.
- Updated history handling in BoardScreen to ensure accurate game state saving and undo functionality.
- Adjusted theme styles for visual consistency across applications.

--- a/.github/workflows/ios_beta_github_killer.yml
+++ b/.github/workflows/ios_beta_github_killer.yml
@@ -121,6 +121,7 @@ jobs:
         env:
           IDEDisableFileSyncMonitor: 'YES'
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          APP_VARIANT: 'killer'
           UNSPLASH_ACCESS_KEY: ${{ secrets.K_UNSPLASH_ACCESS_KEY }}
           AD_APP_ID_ANDROID: ${{ secrets.K_AD_APP_ID_ANDROID }}
           AD_UNIT_BANNER_ANDROID: ${{ secrets.K_AD_UNIT_BANNER_ANDROID }}
