--- a/.github/workflows/android_internal_github.yml
+++ b/.github/workflows/android_internal_github.yml
@@ -114,6 +114,7 @@ jobs:
           fastlane internal_github
         env:
           APP_PACKAGE_NAME: ${{ secrets.K_APP_PACKAGE_NAME }}
+          APP_VARIANT: 'killer'
           UNSPLASH_ACCESS_KEY: ${{ secrets.K_UNSPLASH_ACCESS_KEY }}
           AD_UNIT_BANNER_ANDROID: ${{ secrets.K_AD_UNIT_BANNER_ANDROID }}
           AD_UNIT_INTERSTITIAL_ANDROID: ${{ secrets.K_AD_UNIT_INTERSTITIAL_ANDROID }}
