--- a/.github/workflows/ios_beta_github.yml
+++ b/.github/workflows/ios_beta_github.yml
@@ -50,7 +50,7 @@ jobs:
     name: Run Classic and Killer Build
     needs: check-changes
     if: needs.check-changes.outputs.should_run == 'true'
-    runs-on: macos-latest
+    runs-on: macos-14
     timeout-minutes: 60
 
     steps:
