--- a/.github/workflows/ios_beta_github_classic.yml
+++ b/.github/workflows/ios_beta_github_classic.yml
@@ -62,7 +62,7 @@ jobs:
     name: Run Classic Build
     needs: check-changes
     if: needs.check-changes.outputs.should_run == 'true'
-    runs-on: macos-latest
+    runs-on: macos-14
     timeout-minutes: 60
 
     steps:
