--- a/.github/workflows/ios_beta_github_killer.yml
+++ b/.github/workflows/ios_beta_github_killer.yml
@@ -61,7 +61,7 @@ jobs:
     name: Run Killer Build
     needs: check-changes
     if: needs.check-changes.outputs.should_run == 'true'
-    runs-on: macos-latest
+    runs-on: macos-14
     timeout-minutes: 60
 
     steps:
